Reemplazar conexión MongoDB para evitar exponer credenciales

--- a/Million.Sales.Api/Million.Sales.Api/appsettings.Development.json
+++ b/Million.Sales.Api/Million.Sales.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "MongoSetting": {
-    "ConnectionString": "mongodb+srv://hersongarcia:3BORd2UTw6qx69gk@cluster0.sbbygkh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+	"ConnectionString": "mongodb+srv://<usuario>:<clave>@cluster0.sbbygkh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
     "Database": "SalesDB",
     "Collection": "Sales"
   }
